--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 
     </header>
-    <main class="container">
-        <section class="card-container">
+    <main >
+        <section class="card-container container">
             <p class="card-title text-center noto-serif-font"><span class="orange-color">Our </span> plants
             </p>
             <p class="card-detail light-gray text-center inter-font banner-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -125,7 +125,19 @@
 
         </section>
 
-        
+        <section class="plant-lover-container container">
+            <div class="plant-lover">
+                <img class="plant-lover-image" src="assets/flower-store.png" alt="A man loves flower">
+                <div class="plant-lover-detail">
+                    <p class="plant-lover-title noto-serif-font">Flower & Plants Lover</p>
+                    <ul class="plant-lover-description light-gray inter-font">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
