it's complete now

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <main >
         <section class="card-container container">
-            <p class="card-title text-center noto-serif-font"><span class="orange-color">Our </span> plants
+            <p class="card-title text-center noto-serif-font"><span class="orange-color">Our </span> Plants
             </p>
             <p class="card-detail light-gray text-center inter-font banner-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
